--- a/16-Azure-Functions.ipynb
+++ b/16-Azure-Functions.ipynb
@@ -122,7 +122,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Implicit Implementation"
+    "## Implicit & Explicit Implementations"
    ]
   },
   {
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -194,15 +194,7 @@
      "languageId": "polyglot-notebook"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "abcdefghijklmnopqrstuvwxyz\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "var chars = new char[26];\n",
     "for (int i = 0; i < 26; i++)\n",
@@ -242,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -254,23 +246,7 @@
      "languageId": "polyglot-notebook"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Properties of Person:\n",
-      "FirstName: Khurram\n",
-      "LastName: Aziz\n",
-      "Age: 45\n",
-      "\n",
-      "Properties of Car:\n",
-      "Make: Toyota\n",
-      "Model: Corolla\n",
-      "Year: 2022\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "//Generics & Reflection\n",
     "using System;\n",
@@ -401,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -413,16 +389,7 @@
      "languageId": "polyglot-notebook"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "15\n",
-      "20\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "int outerVariable = 10;\n",
     "\n",
@@ -494,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -506,17 +473,7 @@
      "languageId": "polyglot-notebook"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3\n",
-      "1\n",
-      "2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "using System.Linq;\n",
     "\n",
@@ -535,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -547,18 +504,7 @@
      "languageId": "polyglot-notebook"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Monday, Wednesday, Friday\n",
-      "Join a meeting by phone on Friday\n",
-      "Is there a meeting on Tuesday: False\n",
-      "Monday, Wednesday, Saturday\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "[Flags]\n",
     "public enum Days\n",
@@ -604,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -616,17 +562,7 @@
      "languageId": "polyglot-notebook"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "5"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "int i = 5;\n",
     "i.ToString()"
@@ -634,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -646,48 +582,7 @@
      "languageId": "polyglot-notebook"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<details open=\"open\" class=\"dni-treeview\"><summary><span class=\"dni-code-hint\"><code>7357: Khurram Aziz  [khurram.aziz@juriba.com]</code></span></summary><div><table><thead><tr></tr></thead><tbody><tr><td>TeamMemberId</td><td><div class=\"dni-plaintext\"><pre>7357</pre></div></td></tr><tr><td>FirstName</td><td><div class=\"dni-plaintext\"><pre>Khurram</pre></div></td></tr><tr><td>LastName</td><td><div class=\"dni-plaintext\"><pre>Aziz </pre></div></td></tr><tr><td>Email</td><td><div class=\"dni-plaintext\"><pre>khurram.aziz@juriba.com</pre></div></td></tr></tbody></table></div></details><style>\r\n",
-       ".dni-code-hint {\r\n",
-       "    font-style: italic;\r\n",
-       "    overflow: hidden;\r\n",
-       "    white-space: nowrap;\r\n",
-       "}\r\n",
-       ".dni-treeview {\r\n",
-       "    white-space: nowrap;\r\n",
-       "}\r\n",
-       ".dni-treeview td {\r\n",
-       "    vertical-align: top;\r\n",
-       "    text-align: start;\r\n",
-       "}\r\n",
-       "details.dni-treeview {\r\n",
-       "    padding-left: 1em;\r\n",
-       "}\r\n",
-       "table td {\r\n",
-       "    text-align: start;\r\n",
-       "}\r\n",
-       "table tr { \r\n",
-       "    vertical-align: top; \r\n",
-       "    margin: 0em 0px;\r\n",
-       "}\r\n",
-       "table tr td pre \r\n",
-       "{ \r\n",
-       "    vertical-align: top !important; \r\n",
-       "    margin: 0em 0px !important;\r\n",
-       "} \r\n",
-       "table th {\r\n",
-       "    text-align: start;\r\n",
-       "}\r\n",
-       "</style>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "//TeamMember model\n",
     "\n",
@@ -725,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -737,17 +632,7 @@
      "languageId": "polyglot-notebook"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3.14\n",
-      "-4\n",
-      "3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "double dub = -3.14;\n",
     "Console.WriteLine(Math.Abs(dub));\n",
@@ -757,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -769,48 +654,7 @@
      "languageId": "polyglot-notebook"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div class=\"dni-plaintext\"><pre>98.6</pre></div><style>\r\n",
-       ".dni-code-hint {\r\n",
-       "    font-style: italic;\r\n",
-       "    overflow: hidden;\r\n",
-       "    white-space: nowrap;\r\n",
-       "}\r\n",
-       ".dni-treeview {\r\n",
-       "    white-space: nowrap;\r\n",
-       "}\r\n",
-       ".dni-treeview td {\r\n",
-       "    vertical-align: top;\r\n",
-       "    text-align: start;\r\n",
-       "}\r\n",
-       "details.dni-treeview {\r\n",
-       "    padding-left: 1em;\r\n",
-       "}\r\n",
-       "table td {\r\n",
-       "    text-align: start;\r\n",
-       "}\r\n",
-       "table tr { \r\n",
-       "    vertical-align: top; \r\n",
-       "    margin: 0em 0px;\r\n",
-       "}\r\n",
-       "table tr td pre \r\n",
-       "{ \r\n",
-       "    vertical-align: top !important; \r\n",
-       "    margin: 0em 0px !important;\r\n",
-       "} \r\n",
-       "table th {\r\n",
-       "    text-align: start;\r\n",
-       "}\r\n",
-       "</style>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "public static class TemperatureConverter // only static methods we can make it a static class\n",
     "{\n",
@@ -848,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -860,16 +704,7 @@
      "languageId": "polyglot-notebook"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class Generator\n",
     "{\n",
@@ -887,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -899,16 +734,7 @@
      "languageId": "polyglot-notebook"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2\n",
-      "3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "using System.Threading;\n",
     "\n",
@@ -932,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -944,15 +770,7 @@
      "languageId": "polyglot-notebook"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "// Parsing\n",
     "string s = \"5\";\n",
@@ -962,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -974,22 +792,7 @@
      "languageId": "polyglot-notebook"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5 is parsed to 5\n",
-      "5  is parsed to 5\n",
-      " 5 is parsed to 5\n",
-      " 5  is parsed to 5\n",
-      "5a couldnt be parsed\n",
-      "abc couldnt be parsed\n",
-      " couldnt be parsed\n",
-      "null couldnt be parsed\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "var data = new[] { \"5\", \"5 \", \" 5\", \" 5 \", \"5a\", \"abc\", \"\", null };\n",
     "foreach(var s in data)\n",
