--- a/00-Intro.ipynb
+++ b/00-Intro.ipynb
@@ -4,39 +4,44 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Recap"
+    "# Where are we?"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<p><img src=images/csharp-features.png></p>\n",
-    "\n",
-    "- C# is COOL (C Object Oriented Language)\n",
-    "    - Its Java; but closer to C/C++ and something more\n",
-    "- Working and picking ASP.NET is fine; other than Dependency Injection\n",
-    "- LINQ is nice\n",
-    "\n",
-    "<p><img src=images/csharp-linux-azure.png width=600></p>"
+    "- C# is COOL\n",
+    "- .NET 💖 Linux\n",
+    "- Azure 💖 .NET\n",
+    "- Its a forward looking ecosystem"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# This Week: Azure"
+    "# Azure Week Recap"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- .NET Ecosystem: Open Source / Community Stuff; how we assembled JiraWorklogs\n",
-    "- Azure: Any Platform; Any Language; .NET is supported by all Cloud Providers\n",
-    "- __.NET Ecosystem for Azure__\n",
+    "<img src=images/cloud-meme-2.jpeg>\n",
     "\n",
-    "<p><img src=images/cloud-meme.webp></p>"
+    "- .NET is supported by all Cloud Providers\n",
+    "- Azure: Any Platform; Any Language\n",
+    "- .NET shines in Azure\n",
+    "\n",
+    "<img src=images/azure-arch-ecomm.png width=900><br>\n",
+    "https://github.com/Azure/azure-search-vector-samples/blob/main/demo-python/code/azure-search-integrated-vectorization-sample.ipynb<br>\n",
+    "https://www.youtube.com/watch?v=_2Ax43Dd3Fg\n",
+    "\n",
+    "<img src=images/azure-arch-high-web.png width=900><br>\n",
+    "https://learn.microsoft.com/en-us/azure/architecture/web-apps/app-service-environment/architectures/ase-high-availability-deployment\n",
+    "\n",
+    "- https://learn.microsoft.com/en-us/azure/architecture/browse"
    ]
   },
   {
@@ -50,6 +55,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<img src=images/csharp-features.png>\n",
+    "\n",
+    "- COOL (C Object Oriented Language)\n",
     "- Object Oriented First / *Wanna Be Functional*\n",
     "- Code should look & feel cool\n",
     "- Compiler has some tricks\n",
@@ -112,6 +120,21 @@
     "- ASP.NET and ASP.NET Core\n",
     "- MVC & Web APIs\n",
     "- Entity Framework"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Azure"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Azure: Any Platform; Any Language\n",
+    "- .NET shines in Azure"
    ]
   },
   {
