--- a/19-Xamarin.ipynb
+++ b/19-Xamarin.ipynb
@@ -61,7 +61,8 @@
     "__Resources__\n",
     "\n",
     "- https://www.youtube.com/@dotnet\n",
-    "    - Xamarin for Beginners https://www.youtube.com/watch?v=JH8ekYJrFHs&list=PLdo4fOcmZ0oU10SXt2W58pu2L0v2dOW-1"
+    "    - Xamarin for Beginners; https://www.youtube.com/watch?v=JH8ekYJrFHs&list=PLdo4fOcmZ0oU10SXt2W58pu2L0v2dOW-1\n",
+    "    - .NET MAUI for Beginners; https://www.youtube.com/watch?v=Hh279ES_FNQ&list=PLdo4fOcmZ0oUBAdL2NwBpDs32zwGqb9DY"
    ]
   },
   {
