--- a/19-Xamarin.ipynb
+++ b/19-Xamarin.ipynb
@@ -47,9 +47,23 @@
     "<img src=images/xamarin-forms.png width=800>\n",
     "\n",
     "<img src=images/dotnet5_platform.png width=800>\n",
-    "\n",
-    "- https://devblogs.microsoft.com/dotnet/introducing-net-5\n",
-    "- https://github.com/dotnet/maui; Multiplatform App UI\n",
+    "- https://devblogs.microsoft.com/dotnet/introducing-net-5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## .NET MAUI"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Multiplatform App UI\n",
+    "- https://dotnet.microsoft.com/en-us/apps/maui\n",
+    "- https://github.com/dotnet/maui\n",
     "\n",
     "<img src=images/maui-weather.png width=900>"
    ]
@@ -60,9 +74,16 @@
    "source": [
     "__Resources__\n",
     "\n",
+    "__Github__\n",
+    "- https://github.com/dotnet/maui-samples\n",
+    "- https://github.com/jsuarezruiz/dotnet-maui-showcase\n",
+    "- https://github.com/jsuarezruiz/awesome-dotnet-maui\n",
+    "\n",
+    "__Youtube__\n",
     "- https://www.youtube.com/@dotnet\n",
     "    - Xamarin for Beginners; https://www.youtube.com/watch?v=JH8ekYJrFHs&list=PLdo4fOcmZ0oU10SXt2W58pu2L0v2dOW-1\n",
-    "    - .NET MAUI for Beginners; https://www.youtube.com/watch?v=Hh279ES_FNQ&list=PLdo4fOcmZ0oUBAdL2NwBpDs32zwGqb9DY"
+    "    - .NET MAUI for Beginners; https://www.youtube.com/watch?v=Hh279ES_FNQ&list=PLdo4fOcmZ0oUBAdL2NwBpDs32zwGqb9DY\n",
+    "\n"
    ]
   },
   {
@@ -436,7 +457,7 @@
    "source": [
     "<img src=images/singleton-meme.jpg>\n",
     "\n",
-    "We dont need these days due to Dependency Injection etc; but lets see what it takes"
+    "We dont need to think about it that much due to Dependency Injection etc; but lets see what it takes"
    ]
   },
   {
