--- a/13-JiraWorkLogs.ipynb
+++ b/13-JiraWorkLogs.ipynb
@@ -134,8 +134,8 @@
     "class WorklogDictionary : Dictionary<string, Dictionary<int, long>> { }\n",
     "\n",
     "var dic = new WorklogDictionary();\n",
-    "dic.Add(\"khurram@juriba\", new ());\n",
-    "dic[\"khurram@juriba\"].Add(1, 8 * 60 * 60);  // khurram@juriba worked 8hrs on 1st"
+    "dic.Add(\"khurram@uworx\", new ());\n",
+    "dic[\"khurram@uworx\"].Add(1, 8 * 60 * 60);  // khurram worked 8hrs on 1st"
    ]
   },
   {
