--- a/15-Azure-CosmosDB.ipynb
+++ b/15-Azure-CosmosDB.ipynb
@@ -28,7 +28,7 @@
    "metadata": {},
    "source": [
     "- Hosts file\n",
-    "    - Juriba IIS example\n",
+    "    - IIS example\n",
     "    - Linux has /etc/hosts file\n",
     "- Exposing Ports & ipchains\n",
     "- Docker Compose Networking\n",
@@ -109,7 +109,7 @@
     "                - Lack of support for multi-tab testing\n",
     "                - JavaScript is the preferred language for writing test cases using Cypress\n",
     "        - Its new; limited community (support / additional tooling)\n",
-    "    - Reach out to Juriba Automation Testers: Hamza, Abdul Raffay, Samia and Sakina (Khoji)"
+    "    - Reach out to Automation Testers: Hamza, Abdul Raffay, Samia and Sakina"
    ]
   },
   {
