--- a/16-Azure-Functions.ipynb
+++ b/16-Azure-Functions.ipynb
@@ -605,7 +605,7 @@
     "}\n",
     "\n",
     "var tm = new TeamMember(7357) { FirstName = \"Khurram\", LastName = \"Aziz \"};\n",
-    "tm.Email = \"khurram.aziz@juriba.com\";\n",
+    "tm.Email = \"khurram@uworx\";\n",
     "tm\n",
     "// what else to override from object?\n",
     "// gethashcode and equals...and when / why we should consider overriding it and how to do it ?"
