--- a/19-Xamarin.ipynb
+++ b/19-Xamarin.ipynb
@@ -217,8 +217,7 @@
    },
    "outputs": [],
    "source": [
-    "using System.Threading.Tasks;   // Tasks based; i think 4.5 / Windows 8 time frame\n",
-    "\n",
+    "using System.Threading.Tasks;   // Namespace was introduced in .NET 4\n",
     "var task1 = Task.Factory.StartNew(() =>\n",
     "{\n",
     "    // do something\n",
