--- a/SqlServer.ipynb
+++ b/SqlServer.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Overview"
+    "## Overview 🪂"
    ]
   },
   {
@@ -56,7 +56,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Database Features"
+    "## Database Features 🗄️"
    ]
   },
   {
@@ -170,7 +170,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Accessing SQL Server"
+    "## Accessing SQL Server 🛜"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Drivers"
    ]
   },
   {
@@ -217,24 +224,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Linq to SQL & Entity Framework"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- One to One Mapping vs Skewed/Flattened Mapping\n",
-    "- One Provider vs Multi Provider\n",
-    "- Fast vs Slower"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -243,7 +234,20 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Connection successful!\n",
+      "1 9baac790-1a18-49e3-99f8-c0a676224aaa\n",
+      "2 cdbd5df4-a5b9-4e7a-9a45-9fcab49b06b9\n",
+      "3 aff3f86a-dd06-444e-999f-e4b9e07978fa\n",
+      "4 78dcbd28-38fb-4ac0-8d34-156dc92ade62\n",
+      "5 4744669d-0a5c-4388-8646-e4719022309b\n"
+     ]
+    }
+   ],
    "source": [
     "#r \"System.Data\"\n",
     "\n",
@@ -285,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -294,7 +298,29 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div><div></div><div></div><div><strong>Installed Packages</strong><ul><li><span>Microsoft.Data.SqlClient, 5.2.0</span></li></ul></div></div>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Connection successful!\n",
+      "1 9baac790-1a18-49e3-99f8-c0a676224aaa\n",
+      "2 cdbd5df4-a5b9-4e7a-9a45-9fcab49b06b9\n",
+      "3 aff3f86a-dd06-444e-999f-e4b9e07978fa\n",
+      "4 78dcbd28-38fb-4ac0-8d34-156dc92ade62\n",
+      "5 4744669d-0a5c-4388-8646-e4719022309b\n"
+     ]
+    }
+   ],
    "source": [
     "#r \"nuget:Microsoft.Data.SqlClient\"\n",
     "\n",
@@ -324,6 +350,276 @@
     "        Console.WriteLine(\"Error: \" + ex.Message);\n",
     "    }\n",
     "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Linq to SQL & Entity Framework"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- One to One Mapping vs Skewed/Flattened Mapping\n",
+    "- One Provider vs Multi Provider\n",
+    "- Fast vs Slower"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## SQL Server Tools 🔨 ⛏️"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### SQL Server Management Studio (SSMS) 🔨"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- SSMS and Azure Data Studio"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Script"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "value"
+    },
+    "polyglot_notebook": {
+     "kernelName": "value"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "adding user\n",
+    "\twe want createdate to be not null, but user can skip it and when user skips it should pick current time\n",
+    "\tpick current time\n",
+    "\twe want username to be not null\n",
+    "\n",
+    "avoid adding multiple user - roles\n",
+    "    we want userid to be unique\n",
+    "    we want roleid to be unique\n",
+    "\n",
+    "query user and roles\n",
+    "\tselect columns from tree\n",
+    "\n",
+    "m - n association\n",
+    "\n",
+    "query user having roles\n",
+    "query user having roles and if no role should have row\n",
+    "\n",
+    "create sproc\n",
+    "\n",
+    "create procedure [dbo].[UserHasRole]\n",
+    "\t@UserId nvarchar(50), @RoleId nvarchar(50)\n",
+    "as\n",
+    "begin\n",
+    "\tif exists (select ur.UserRoleIndex\n",
+    "\t\tfrom Users u join UserRoles ur on u.UserIndex = ur.UserIndex\n",
+    "\t\t\tjoin Roles r on ur.RoleIndex = r.RoleIndex\n",
+    "\t\twhere u.UserId = @UserId\n",
+    "\t\t\tand r.RoleId = @RoleId\n",
+    "\t)\n",
+    "\tbegin\n",
+    "\t\tselect 1 [Exist];\n",
+    "\tend\n",
+    "\telse\n",
+    "\tbegin\n",
+    "\t\tselect 0 [Exist];\n",
+    "\tend\n",
+    "end\n",
+    "go\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### SQL Server Data Tools (SSDT) ⛏️"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Database Schema as Code\n",
+    "    - Project Oriented\n",
+    "    - Offline\n",
+    "- Schema Compare\n",
+    "- Data Compare\n",
+    "\n",
+    "- Dac Compatibility/Integration\n",
+    "- Unit Tests"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### VS Code Extensions 🧾"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Name: SQL Server (mssql)\n",
+    "    - https://marketplace.visualstudio.com/items?itemName=ms-mssql.mssql\n",
+    "- Name: SQL Database Projects\n",
+    "    - https://marketplace.visualstudio.com/items?itemName=ms-mssql.sql-database-projects-vscode"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Change Management 📚"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Overview"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=images/sql-change-management.png>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__Data Definition Language__\n",
+    "- create, alter\n",
+    "- drop\n",
+    "- truncate, comment, rename\n",
+    "\n",
+    "__Data Query/Manipulation Language__\n",
+    "- select\n",
+    "- update, delete, insert\n",
+    "- lock, call, explain\n",
+    "\n",
+    "__Data Control Language__\n",
+    "- grant, revoke\n",
+    "\n",
+    "__Transaction Control Language__\n",
+    "- begin commit transactions\n",
+    "- rollback, savepoint"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__Ways__\n",
+    "\n",
+    "1. Hand written Scripts\n",
+    "2. Applicattion generated DDL\n",
+    "    - Seperate Tool / Setup\n",
+    "        - From - To concerns\n",
+    "            - Dynamics Example\n",
+    "        - Post Migration Steps\n",
+    "            - Dynamics Example\n",
+    "    - Integrated\n",
+    "        - Migrations\n",
+    "            - Ruby on Rails\n",
+    "            - Entity Framework\n",
+    "3. Tool generated DDL\n",
+    "    - SQL Compare\n",
+    "    - Dac / Dacpac / Demo"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=images/gp-utilities.webp>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Script"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "value"
+    },
+    "polyglot_notebook": {
+     "kernelName": "value"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "create Khoji 2\n",
+    "\tscript generate from Khoji 1\n",
+    "\tbe careful use dbs\n",
+    "\tcreate Khoji 2\n",
+    "\n",
+    "add isdeleted in user and roles\n",
+    "\tupdate sproc\n",
+    "\n",
+    "\tcreate dacpac\n",
+    "\tapply dacpac\n",
+    "\n",
+    "delete isdeleted from user and roles\n",
+    "\tsproc is out of sync and will fail when run"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Real World Example"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=images/db-changes.png>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Configuration Management"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=images/config-management.webp>"
    ]
   }
  ],
