--- a/00-Intro.ipynb
+++ b/00-Intro.ipynb
@@ -79,7 +79,7 @@
     "    - OLAP: Analysis Server\n",
     "    - BI: Reporting Server\n",
     "    - ETL: Integration Services\n",
-    "    - ML: Machine Learning Services /w R, Python, Java and C#"
+    "    - ML: Machine Learning Services /w R, Python and Java"
    ]
   },
   {
@@ -160,7 +160,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Build"
+    "### Build"
    ]
   },
   {
@@ -186,7 +186,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Ignite"
+    "### Ignite"
    ]
   },
   {
@@ -212,7 +212,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Inspire"
+    "### Inspire"
    ]
   },
   {
@@ -236,7 +236,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## .NET Conf"
+    "### .NET Conf"
    ]
   },
   {
@@ -297,6 +297,21 @@
     "- https://www.youtube.com/@MicrosoftTeams\n",
     "- https://www.youtube.com/@mspowerplatform\n",
     "- https://www.youtube.com/@Microsoft365Developer"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Books and Courses"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- https://www.microsoftpressstore.com\n",
+    "- https://learn.microsoft.com"
    ]
   }
  ],
