--- a/21-AI-II.ipynb
+++ b/21-AI-II.ipynb
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -333,7 +333,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### F# as a better Python"
+    "#### F# and Python"
    ]
   },
   {
@@ -390,7 +390,6 @@
    },
    "outputs": [],
    "source": [
-    "//F# equivalent; used ChatGPT\n",
     "type NeuralNetwork() =\n",
     "    inherit nn.Module(\"NeuralNetwork\")\n",
     "\n",
@@ -411,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -430,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -479,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -496,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -562,6 +561,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<img src=images/gradient-descent.png>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- https://en.wikipedia.org/wiki/Gradient_descent\n",
     "- https://diffsharp.github.io"
    ]
   },
@@ -578,7 +585,25 @@
    "source": [
     "- F# as a Better Python - https://www.youtube.com/watch?v=_QnbV6CAWXc\n",
     "\n",
-    "<img src=images/ai-net-2.jpg width=800>"
+    "<img src=images/ai-net-2.jpg width=800>\n",
+    "\n",
+    "- Python Tools in Visual Studio\n",
+    "- https://developer.microsoft.com/en-us/python\n",
+    "    - Python and VS Code\n",
+    "    - Python in SQL Server\n",
+    "    - Python in Excel"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__Resources__\n",
+    "- https://www.cambridge.org/core/books/functional-programming-using-f/BAB494BBE8AEBB13486F9A8362273D41\n",
+    "- https://fsharpforfunandprofit.com\n",
+    "- https://exercism.org/tracks/fsharp\n",
+    "- https://www.fssnip.net\n",
+    "- https://dotnet.microsoft.com/en-us/learn/fsharp"
    ]
   },
   {
@@ -952,22 +977,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Poor Man's Vector Search / Embeddings"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- https://neptune.ai/blog/tokenization-in-nlp\n",
-    "- https://github.com/NMZivkovic/BertTokenizers\n",
-    "- https://huggingface.co/sentence-transformers/all-MiniLM-L6-v2"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Microsoft Fabric 🥰 🤑"
    ]
   },
@@ -992,6 +1001,34 @@
    "metadata": {},
    "source": [
     "<img src=images/data-processing.jpg width=800>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Poor Man's Vector Search"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__Inception__\n",
+    "- https://sl.bing.net/ZU3u43AUP6\n",
+    "\n",
+    "__Elaboration__\n",
+    "- https://neptune.ai/blog/tokenization-in-nlp\n",
+    "- https://huggingface.co/sentence-transformers/all-MiniLM-L6-v2\n",
+    "\n",
+    "__Construction__\n",
+    "- https://github.com/curiosity-ai/hnsw-sharp\n",
+    "- https://github.com/curiosity-ai/MiniLM\n",
+    "    - https://github.com/NMZivkovic/BertTokenizers\n",
+    "- Demo\n",
+    "\n",
+    "__Transition__\n",
+    "- https://sl.bing.net/iu6M8Mbz4o0"
    ]
   },
   {
